Add endpoint to copy documents
