# areas/backend/static/swagger.json
@@ -266,7 +266,7 @@
               "example": {
                 "title": "Test",
                 "description": "Description",
-                "document_name": "Test document name",
+                "document_name": "test_document_name.txt",
                 "document_data": "data:@file/plain;base64,VGVzdCBkb2N1bWVudA=="
               }
             }
@@ -493,6 +493,68 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/branch_item_view"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/workspace/{space_id}/copy/{branch_id}": {
+      "post": {
+        "parameters": [
+          {
+            "name": "space_id",
+            "in": "path",
+            "description": "Workspace id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "branch_id",
+            "in": "path",
+            "description": "Branch id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/new_workspace"
+              },
+              "example": {
+                "title": "Test",
+                "description": "0"
+              }
+            }
+          }
+        },
+        "tags": [
+          "UserRequest"
+        ],
+        "summary": "Creates new workspace with copy of specified branch",
+        "responses": {
+          "400": {
+            "description": "Failed. Bad post data."
+          },
+          "401": {
+            "description": "Not allowed"
+          },
+          "404": {
+            "description": "Not found"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/new_workspace"
                 }
               }
             }
